--- a/itcast-haoke-manage/itcast-haoke-manage-api-server/pom.xml
+++ b/itcast-haoke-manage/itcast-haoke-manage-api-server/pom.xml
@@ -50,6 +50,17 @@
             <version>2.6</version>
         </dependency>
 
+        <!--es-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.plugin</groupId>
+            <artifactId>transport-netty4-client</artifactId>
+            <version>6.2.3</version>
+        </dependency>
+
     </dependencies>
 
 
