--- a/itcast-haoke-manage/itcast-haoke-manage-api-server/src/main/resources/application.properties
+++ b/itcast-haoke-manage/itcast-haoke-manage-api-server/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.max-idle=500
 spring.redis.jedis.pool.min-idle=0
 spring.redis.lettuce.shutdown-timeout=0
+
+
+
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=192.168.16.128:9300
+
