--- a/itcast-haoke-manage/itcast-haoke-manage-api-server/pom.xml
+++ b/itcast-haoke-manage/itcast-haoke-manage-api-server/pom.xml
@@ -61,6 +61,17 @@
             <version>6.2.3</version>
         </dependency>
 
+        <!--mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
     </dependencies>
 
 
