--- a/itcast-haoke-manage/itcast-haoke-manage-api-server/src/main/resources/application.properties
+++ b/itcast-haoke-manage/itcast-haoke-manage-api-server/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.redis.lettuce.shutdown-timeout=0
 spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.cluster-nodes=192.168.16.128:9300
 
+#mongodb≈‰÷√
+spring.data.mongodb.uri=mongodb://192.168.16.128:27017/testdb
