--- a/itcast-haoke-manage/pom.xml
+++ b/itcast-haoke-manage/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.3</version>
+        </dependency>
     </dependencies>
 
 
