--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/itcast-haoke-manage/
-/itcast-haoke-manage/itcast-haoke-manage-dubbo-server/
-/itcast-haoke-manage/itcast-haoke-manage-api-server/
-/target/
-*.iml
+
+.idea/
+.iml
+*.class
+*.log
+target/
