--- a/itcast-haoke-manage/haoke-manage-dubbo-server/haoke-center-house/haoke-center-house-service/pom.xml
+++ b/itcast-haoke-manage/haoke-manage-dubbo-server/haoke-center-house/haoke-center-house-service/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>haoke-center-house-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
